Removed superfluous explanations

--- a/functions/eitu/templates/index.html
+++ b/functions/eitu/templates/index.html
@@ -33,7 +33,6 @@
     <h1>{{ title }}</h1>
     <section>
       <h2>Rooms</h2>
-      <p>Class rooms. Sorted by status and name.</p>
       <table>
         <tr>
           <th>Room</th>
@@ -48,8 +47,7 @@
       </table>
     </section>
     <section>
-      <h2>Boxes</h2>
-      <p>Glass boxes. First-come first-served.</p>
+      <h2>Glass boxes</h2>
       <table>
         <tr>
           <th>Box</th>
