Simplified glass box stuff

--- a/functions/eitu/templates/index.html
+++ b/functions/eitu/templates/index.html
@@ -48,16 +48,7 @@
     </section>
     <section>
       <h2>Glass boxes</h2>
-      <table>
-        <tr>
-          <th>Box</th>
-        </tr>
-        {% for box in boxes %}
-        <tr>
-          <td>{{ box }}</td>
-        </tr>
-        {% endfor %}
-      </table>
+      <p>First-come first-serve glass boxes: 2A03, 2A07, 3A03, 4A01, 4A03, 4A07, 5A03, 5A07</p>
     </section>
     <footer>
       <p>Updated {{ updated }}</p>
