--- a/functions/eitu/templates/index.html
+++ b/functions/eitu/templates/index.html
@@ -6,7 +6,7 @@
     <title>{{ title }}</title>
     <style>
       body {
-        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+        font-family: Menlo, Consolas, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, sans-serif;
         padding: 1rem;
       }
       section,
@@ -26,6 +26,9 @@
       td {
         padding: 0.5rem;
         border: 1px solid #000;
+      }
+      p {
+        line-height: 1.5em;
       }
     </style>
   </head>
