--- a/functions/eitu/templates/index.html
+++ b/functions/eitu/templates/index.html
@@ -1,3 +1,18 @@
+{% macro table(rooms) -%}
+<table>
+  <tr>
+    <th>Room</th>
+    <th>Until</th>
+  </tr>
+  {% for room in rooms %}
+  <tr>
+    <td>{{ room.name }}</td>
+    <td>{{ room.until }}</td>
+  </tr>
+  {% endfor %}
+</table>
+{%- endmacro %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -12,11 +27,16 @@
       section, footer {
         margin-top: 2rem;
       }
-      h1 {
+      h1, h2 {
         margin: 0;
         padding: 0;
         font-weight: bold;
+      }
+      h1 {
         font-size: 1rem;
+      }
+      h2 {
+        font-size: 1.5rem;
       }
       table {
         border-collapse: collapse;
@@ -33,22 +53,18 @@
   </head>
   <body>
     <h1>{{ title }}</h1>
+    {% if empty %}
     <section>
-      <table>
-        <tr>
-          <th>Room</th>
-          <th>Status</th>
-          <th>Until</th>
-        </tr>
-        {% for room in rooms %}
-        <tr>
-          <td>{{ room.name }}</td>
-          <td>{{ room.status }}</td>
-          <td>{{ room.until }}</td>
-        </tr>
-        {% endfor %}
-      </table>
+      <h2>Empty rooms:</h2>
+      {{ table(empty) }}
     </section>
+    {% endif %}
+    {% if occupied %}
+    <section>
+      <h2>Occupied rooms:</h2>
+      {{ table(occupied) }}
+    </section>
+    {% endif %}
     <section>
       <p>First-come first-serve glass boxes: 2A03, 2A07, 3A03, 4A01, 4A03, 4A07, 5A03, 5A07</p>
     </section>
