--- a/functions/eitu/templates/index.html
+++ b/functions/eitu/templates/index.html
@@ -66,7 +66,9 @@
     </section>
     {% endif %}
     <section>
-      <p>First-come first-serve glass boxes: 2A03, 2A07, 3A03, 4A01, 4A03, 4A07, 5A03, 5A07</p>
+      <h2>First-come first-serve:</h2>
+      <p>Glass boxes: 2A03, 2A07, 3A03, 4A01, 4A03, 4A07, 5A03, 5A07.</p>
+      <p>Corner rooms: 2A40, 2A42, 3A58, 3A60, 4A08, 4A32, 4A34, 4A62, 4A64, 5A32, 5A44, 5A46, 5A54, 5A62, 5A64.</p>
     </section>
     <footer>
       <p>Updated {{ updated }}</p>
