--- a/functions/eitu/templates/index.html
+++ b/functions/eitu/templates/index.html
@@ -70,7 +70,9 @@
       <p>Glass boxes: 2A03, 2A07, 3A03, 4A01, 4A03, 4A07, 5A03, 5A07.</p>
       <p>Corner rooms: 2A40, 2A42, 3A58, 3A60, 4A08, 4A32, 4A34, 4A62, 4A64, 5A32, 5A44, 5A46, 5A54, 5A62, 5A64.</p>
     </section>
+    <hr/>
     <footer>
+      <p>The availability of rooms is solely based on data from <a title="TimeEdit" href="https://timeedit.itu.dk/">TimeEdit</a>. Reality may differ.</p>
       <p>Updated {{ updated }}</p>
       <p>Developed by <a title="Bjørn Friese" href="https://frieze.dk">Bjørn Friese</a></p>
       <p><a title="Fork me on Github" href="https://github.com/eitu/eitu">Fork me on Github</a></p>
