Update to the views to support wifi.

--- a/eitu/templates/index.html
+++ b/eitu/templates/index.html
@@ -62,6 +62,7 @@
   </head>
   <body>
     <h1>{{ title }}</h1>
+    <div id="app"></div>
  {% if empty %}
     <section>
       <h2>Empty rooms</h2>
