--- a/eitu/templates/index.html
+++ b/eitu/templates/index.html
@@ -27,10 +27,11 @@
     <style>
       body {
         font-family: Menlo, Consolas, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, sans-serif;
-        padding: 1rem;
+				margin: 0;
+        /* padding: 1rem; */
       }
       section, footer {
-        margin-top: 2rem;
+        /* margin-top: 2rem; */
       }
       h1, h2 {
         margin: 0;
@@ -61,21 +62,8 @@
 
   </head>
   <body>
-    <h1>{{ title }}</h1>
+    <!-- <h1>{{ title }}</h1> -->
     <div id="app"></div>
- {% if empty %}
-    <section>
-      <h2>Empty rooms</h2>
-      {{ table(empty) }}
-    </section>
-    {% endif %}
-    {% if occupied %}
-    <section>
-      <h2>Occupied rooms</h2>
-      {{ table(occupied) }}
-    </section>
-    {% endif %}
-
 
     {% if not wifi %}
     <section>
